@@ -21,10 +21,11 @@ package org.apache.pig.impl.util;
 import java.util.ArrayList;
 import java.util.List;
 
-
 import org.apache.pig.EvalFunc;
 import org.apache.pig.FuncSpec;
 import org.apache.pig.backend.hadoop.executionengine.physicalLayer.expressionOperators.ConstantExpression;
+import org.apache.pig.backend.hadoop.executionengine.physicalLayer.expressionOperators.ExpressionOperator;
+import org.apache.pig.backend.hadoop.executionengine.physicalLayer.expressionOperators.POAnd;
 import org.apache.pig.backend.hadoop.executionengine.physicalLayer.expressionOperators.POBinCond;
 import org.apache.pig.backend.hadoop.executionengine.physicalLayer.expressionOperators.POProject;
 import org.apache.pig.backend.hadoop.executionengine.physicalLayer.expressionOperators.POUserFunc;
@@ -47,7 +48,8 @@ import org.apache.pig.impl.plan.PlanException;
  */
 public class CompilerUtils {
 
-    public static void addEmptyBagOuterJoin(PhysicalPlan fePlan, Schema inputSchema) throws PlanException {
+    public static void addEmptyBagOuterJoin(PhysicalPlan fePlan, Schema inputSchema,
+            boolean skewedJoin, String isFirstReduceOfKeyClassName) throws PlanException {
         // we currently have POProject[bag] as the only operator in the plan
         // If the bag is an empty bag, we should replace
         // it with a bag with one tuple with null fields so that when we flatten
@@ -59,6 +61,18 @@ public class CompilerUtils {
         // POProject[Bag]
         //         \     
         //    POUserFunc["IsEmpty()"] Const[Bag](bag with null fields)   
+        //                        \      |    POProject[Bag]             
+        //                         \     |    /
+        //                          POBinCond
+        // Further, if it is skewed join, only the first reduce of the key
+        // will generate tuple with null fields (See PIG-4377)
+        // 
+        // POProject[key]              POProject[Bag]
+        //         \                      /
+        //      IsFirstReduceOfKey  POUserFunc["IsEmpty()"]
+        //                   \        /
+        //                    \      /
+        //                       AND  Const[Bag](bag with null fields)   
         //                        \      |    POProject[Bag]             
         //                         \     |    /
         //                          POBinCond
@@ -76,6 +90,35 @@ public class CompilerUtils {
             isEmpty.setResultType(DataType.BOOLEAN);
             fePlan.add(isEmpty);
             fePlan.connect(relationProjectForIsEmpty, isEmpty);
+
+            ExpressionOperator cond;
+            if (skewedJoin) {
+                POProject projectForKey = new POProject(new OperatorKey(scope,NodeIdGenerator.getGenerator().getNextNodeId(scope)));
+                projectForKey.setColumn(0);
+                projectForKey.setOverloaded(false);
+                projectForKey.setResultType(inputSchema.getField(0).type);
+
+                POAnd and = new POAnd(new OperatorKey(scope, NodeIdGenerator.getGenerator().
+                        getNextNodeId(scope)));
+                FuncSpec isFirstReduceOfKeySpec = new FuncSpec(isFirstReduceOfKeyClassName);
+                Object f1 = PigContext.instantiateFuncFromSpec(isFirstReduceOfKeySpec);
+                POUserFunc isFirstReduceOfKey = new POUserFunc(new OperatorKey(scope, NodeIdGenerator.getGenerator().
+                            getNextNodeId(scope)), -1, null, isFirstReduceOfKeySpec, (EvalFunc) f1);
+
+                fePlan.add(projectForKey);
+                fePlan.add(isFirstReduceOfKey);
+                fePlan.add(and);
+
+                fePlan.connect(projectForKey, isFirstReduceOfKey);
+                fePlan.connect(isFirstReduceOfKey, and);
+                fePlan.connect(isEmpty, and);
+                and.setLhs(isFirstReduceOfKey);
+                and.setRhs(isEmpty);
+
+                cond = and;
+            } else {
+                cond = isEmpty;
+            }
             
             // lhs of bincond (const bag with null fields)
             ConstantExpression ce = new ConstantExpression(new OperatorKey(scope,
@@ -98,13 +141,13 @@ public class CompilerUtils {
             // let's set up the bincond now
             POBinCond bincond = new POBinCond(new OperatorKey(scope,
                     NodeIdGenerator.getGenerator().getNextNodeId(scope)));
-            bincond.setCond(isEmpty);
+            bincond.setCond(cond);
             bincond.setLhs(ce);
             bincond.setRhs(relationProject);
             bincond.setResultType(DataType.BAG);
             fePlan.add(bincond);
 
-            fePlan.connect(isEmpty, bincond);
+            fePlan.connect(cond, bincond);
             fePlan.connect(ce, bincond);
             fePlan.connect(relationProject, bincond);
 
