@@ -3068,6 +3068,20 @@ e = join a by name full outer, b by name ;
 store e into ':OUTPATH:';\,
 
                         },
+                # right outer join with fixed memory
+                        {
+                        'num' => 11,
+                        'java_params' => ['-Dpig.skewedjoin.reduce.maxtuple=100 -Dpig.skewedjoin.reduce.mem=516947966'],
+                        'pig' => q\a = load ':INPATH:/singlefile/studenttab10k' using PigStorage() as (name, age, gpa);
+b = load ':INPATH:/singlefile/votertab10k' as (name, age, registration, contributions);
+e = join a by name right outer, b by name using 'skewed' parallel 8;
+store e into ':OUTPATH:';\,
+                        'verify_pig_script' => q\a = load ':INPATH:/singlefile/studenttab10k' using PigStorage() as (name, age, gpa);
+b = load ':INPATH:/singlefile/votertab10k' as (name, age, registration, contributions);
+e = join a by name right outer, b by name ;
+store e into ':OUTPATH:';\,
+
+                        },
                 ]
 
             },
